[IMP] dashboard: fix dark mode background
since 5069d49f18ba3c9476a4904d3596b2d1ef6ea7d4 dashboard background are white in darkmode

Task: 6349211

--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -3,8 +3,4 @@
     position: absolute;
     cursor: pointer;
   }
-
-  .o-grid.o-dashboard-grid {
-    background-color: transparent;
-  }
 }
